--- a/style.css
+++ b/style.css
@@ -1,1 +1,37 @@
+html,
+body {
+  width: 50%;
+  margin: 0 auto;
 
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+  width: 360px;
+}
+
+.to-dos {
+  margin-top: 25px;
+}
+
+#inputField {
+  width: 300px;
+  height: 50px;
+  border: 1px solid grey;
+  vertical-align: middle;
+  font-size: 25px;
+}
+
+#addToDo {
+  width: ;
+  height: ;
+  border: 1px solid grey;
+  vertical-align: middle;
+  font-size: 30px;
+}
+
+#toDoContainer {
+}
+.paragraph-styling {
+  cursor: pointer;
+}
